apps/staging/sabnzbd/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: sabnzbd
  namespace: media
  annotations:
    cert-manager.io/cluster-issuer: letsencrypt-production
    traefik.ingress.kubernetes.io/router.entrypoints: websecure
    traefik.ingress.kubernetes.io/router.tls: "true"
spec:
  ingressClassName: traefik
  tls:
    - hosts:
        - sabnzbd.christophervestman.com
      secretName: sabnzbd-tls
  rules:
    - host: sabnzbd.christophervestman.com
      http:
        paths:
          - pathType: Prefix
            path: "/"
            backend:
              service:
                name: sabnzbd
                port:
                  number: 8080
